--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon index.js"
   },
-  "author": "vuka",
+  "author": "chandramouli",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
